--- a/src/EcoBytes/EcoBytes.csproj
+++ b/src/EcoBytes/EcoBytes.csproj
@@ -7,4 +7,8 @@
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\lib\u4\src\u4.Engine\u4.Engine.csproj" />
+    </ItemGroup>
+
 </Project>
